--- a/index.html
+++ b/index.html
@@ -90,112 +90,13 @@
     .shot{width:clamp(260px,70vw,360px);background:#eafff3;border:1px solid #c7f0db;border-radius:18px;padding:12px;scroll-snap-align:start;box-shadow:0 10px 28px rgba(0,0,0,.08)}
     .shot .img{aspect-ratio:4/3;background:#f3f4f6;border-radius:12px}
 
-    /* (Old) Founder grid styles kept (harmless) */
+    /* Founder */
     .founder{background:#0b0b0b;color:#fff;padding:48px 0}
     .founder-grid{max-width:1100px;margin:0 auto;display:grid;gap:28px}
     .f-photo{border-radius:22px;overflow:hidden;box-shadow:0 18px 60px rgba(0,0,0,.45);justify-self:center;width:min(520px,92vw);height:auto;background:#111}
     .f-copy h2{font-size:30px;font-weight:900;margin-bottom:10px}
     .f-quote{background:#111827;border-left:4px solid #93c5fd;padding:16px;border-radius:14px;color:#dbeafe;font-style:italic;margin:12px 0 14px}
     .f-meta{color:#cbd5e1}
-    /* Make bullets readable on the dark founder section */
-    .founder .bullets li { color: #e5e7eb; }
-    .f-points { margin-top:14px; }
-
-
-
-
-    /* Image-2: dark founder card */
-.founder { background:#0b0b0b; color:#fff; padding:56px 0; }
-.f-card{
-  background:#0f1115;
-  border:1px solid #1f2937;
-  border-radius:24px;
-  padding:28px;
-  display:grid;
-  grid-template-columns:140px 1fr;
-  gap:24px;
-  box-shadow:0 24px 60px rgba(0,0,0,.45);
-}
-.f-avatar{
-  width:140px; height:140px; border-radius:999px; object-fit:cover;
-  border:2px solid #334155; box-shadow:0 8px 24px rgba(0,0,0,.5);
-  display:block;
-}
-.f-title{ font-size:34px; line-height:1.2; font-weight:900; color:#fff; }
-.f-title-strong{ display:block; font-size:36px; }
-.f-sub{ color:#9ca3af; font-style:italic; margin:6px 0 12px; }
-.f-body p{ color:#e5e7eb; margin:8px 0; }
-.f-points{ list-style:none; margin:14px 0 0; padding:0; }
-.f-points li{
-  display:flex; align-items:flex-start; gap:10px;
-  color:#e5e7eb; margin:8px 0;
-}
-.f-points .icon{ width:22px; text-align:center; flex:0 0 22px; }
-
-/* ensure bullets in this dark block stay readable */
-.founder .bullets li, .f-points li { color:#e5e7eb; }
-
-/* responsive */
-@media (max-width:768px){
-  .f-card{ grid-template-columns:1fr; text-align:left; }
-  .f-title{ font-size:28px; }
-  .f-title-strong{ font-size:30px; }
-  .f-left{ order:0; }
-}
-
-
-
-
-
-    
-
-    /* Image-2: dark founder card */
-    .founder { background:#0b0b0b; color:#fff; padding:56px 0; }
-    .f-card{
-      background:#0f1115;
-      border:1px solid #1f2937;
-      border-radius:24px;
-      padding:28px;
-      display:grid;
-      grid-template-columns:140px 1fr;
-      gap:24px;
-      box-shadow:0 24px 60px rgba(0,0,0,.45);
-    }
-    .f-avatar{
-      width:140px; height:140px; border-radius:999px; object-fit:cover;
-      border:2px solid #334155; box-shadow:0 8px 24px rgba(0,0,0,.5);
-      display:block;
-    }
-    .f-title{ font-size:34px; line-height:1.2; font-weight:900; color:#fff; }
-    .f-title-strong{ display:block; font-size:36px; }
-    .f-sub{ color:#9ca3af; font-style:italic; margin:6px 0 12px; }
-    .f-body p{ color:#e5e7eb; margin:8px 0; }
-    .f-points{ list-style:none; margin:14px 0 0; padding:0; }
-    .f-points li{ display:flex; align-items:flex-start; gap:10px; color:#e5e7eb; margin:8px 0; }
-    .f-points .icon{ width:22px; text-align:center; flex:0 0 22px; }
-    /* ensure bullets in this dark block stay readable */
-    .founder .bullets li, .f-points li { color:#e5e7eb; }
-
-    /* ===== OVERRIDES: Bigger headshot circle ===== */
-    @media (min-width: 768px){
-      .f-card{
-        grid-template-columns: 320px 1fr;  /* wider left column for the big circle */
-        padding: 40px;                     /* breathing room so it doesn't feel cramped */
-        gap: 28px;
-      }
-      .f-avatar{
-        width: 320px;
-        height: 320px;
-        border-width: 4px;
-      }
-      .f-title{ font-size: 40px; }
-      .f-title-strong{ font-size: 44px; }
-    }
-    @media (min-width: 1440px){
-      .f-card{ grid-template-columns: 360px 1fr; }
-      .f-avatar{ width: 360px; height: 360px; }
-    }
-    /* ============================================ */
 
     /* Success strip */
     .success{padding:28px 0}
@@ -395,10 +296,11 @@
           <div class="num">3</div>
           <div>
             <h3>Mentorship Sessions</h3>
+            <!-- replaced the old subtitle with the full detailed content panel below -->
           </div>
         </article>
 
-        <!-- NEW: Step 3 detailed content -->
+        <!-- NEW: Step 3 detailed content (from images 2/3/4/5) -->
         <div class="how-panel" id="mentorship-details">
           <h5>100% Personalised 1-on-1 Mentorship — No Batches. No Distractions. ✅</h5>
 
@@ -429,6 +331,7 @@
           <p style="margin-top:10px"><b>Your Child, Their Mentor, One Goal — Crack JEE.</b><br>
           <b>Where every session revolves around your child.</b></p>
         </div>
+        <!-- /NEW Step 3 details -->
 
         <!-- Step 4 -->
         <article class="step">
@@ -463,7 +366,9 @@
     </div>
   </section>
 
-  <!-- Short success strip -->
+
+
+   <!-- Short success strip -->
   <section class="success" id="success">
     <div class="container">
       <h2 class="section-title">JEE Advanced Toppers</h2>
@@ -487,45 +392,23 @@
     </div>
   </section>
 
-  <!-- Founder (Image-2 style) -->
- <!-- Founder (Image-2 style) -->
-<section class="founder" id="founder">
-  <div class="container">
-    <div class="f-card">
-      <div class="f-left">
-        <img
-          class="f-avatar"
-          src="https://via.placeholder.com/240x240.png?text=Prudhvi"
-          alt="Prudhvi — Founder of iiTuitions" />
+  
+
+  <!-- Founder slab -->
+  <section class="founder" id="founder">
+    <div class="founder-grid">
+      <div class="f-photo">
+        <img src="https://via.placeholder.com/900x900/0b0b0b/ffffff?text=Founder+Photo" alt="Prudhvi Sir — Founder of IITuitions" style="width:100%;height:auto;display:block">
       </div>
-
-      <div class="f-right">
-        <h2 class="f-title">Founded by Prudhvi — <span class="f-title-strong">NIT Warangal</span></h2>
-        <div class="f-sub">(Former Physics HOD Hyderabad)</div>
-
-        <div class="f-body">
-          <p>
-            I worked as a <b>Physics HOD</b> in a large coaching centre.
-            Every day I watched a class of <b>80</b> race through the syllabus;
-            <b>7–8</b> kept pace, many more slipped behind. Not because they were weak—
-            but because the <b>batch was too big</b> and the <b>curriculum too fast</b>.
-            Even when teachers wanted to help, there wasn’t time.
-          </p>
-          <p>
-            In <b>2017</b>, I decided to build the opposite of that system.
-          </p>
-        </div>
-
-        <ul class="f-points">
-          <li><span class="icon">🎓</span><b>100% 1-on-1 classes</b> with IIT/NIT mentors</li>
-          <li><span class="icon">🎯</span><b>Only 50 students/year</b> = quality over quantity</li>
-          <li><span class="icon">📞</span><b>Weekly parent reviews</b> • instant strategy corrections</li>
-        </ul>
+      <div class="f-copy">
+        <h2>Founded by Prudhvi Sir</h2>
+        <div class="f-quote">“Just as Arjuna achieved greatness through focused concentration and dedication, our students align mind, intellect, and action toward IIT dreams.”</div>
+        <p class="f-meta">NIT Warangal graduate. Since 2017 we’ve stayed true to <b>individual attention</b>, <b>recorded sessions</b>, and <b>weekly parent reviews</b>.</p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+ 
 
   <!-- Comparison -->
   <section class="compare" id="why">
@@ -609,10 +492,11 @@
         }
       });
     }
-    // Accordions
+    // Accordions (if any elsewhere)
     document.querySelectorAll('.accordion .acc-h').forEach(h=>{
       h.addEventListener('click',()=> h.parentElement.classList.toggle('open'));
     });
+
     // Year
     document.getElementById('yr').textContent = new Date().getFullYear();
   </script>
