--- a/index.html
+++ b/index.html
@@ -485,6 +485,34 @@
     </div>
   </section>
 
+<!-- Video: 2-minute walkthrough of the mentoring system -->
+<section id="mentoring-video" style="padding:24px 0;background:#fff">
+  <div class="container">
+    <h2 class="section-title" style="margin-bottom:8px">2-minute walkthrough of the mentoring system</h2>
+
+    <div class="yt-wrap" style="
+      position:relative; width:100%; max-width:900px; margin:0 auto;
+      border-radius:16px; overflow:hidden; background:#000;
+      box-shadow:0 12px 28px rgba(0,0,0,.12);
+    ">
+      <!-- Responsive 16:9 embed; Shorts link converted to /embed/ -->
+      <iframe
+        src="https://www.youtube.com/embed/-dA8MyVsFZM"
+        title="iiTuitions video"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+        style="position:absolute; inset:0; width:100%; height:100%;"
+      ></iframe>
+      <div style="padding-top:56.25%"></div>
+    </div>
+  </div>
+</section>
+
+
+
+  
+
   <!-- Comparison -->
   <section class="compare" id="why">
     <div class="container c-wrap">
