--- a/index.html
+++ b/index.html
@@ -513,33 +513,44 @@
 
   
 
-  <!-- Comparison -->
-  <section class="compare" id="why">
-    <div class="container c-wrap">
-      <div class="tbl">
-        <div class="th th-a">Traditional Coaching Problems</div>
-        <table>
-          <tbody>
-            <tr><td>80+ in class; no individual help</td></tr>
-            <tr><td>Fast teaching; faster revision</td></tr>
-            <tr><td>No recordings; missed concepts lost</td></tr>
-            <tr><td>Generic plans; weak-topic blind spots</td></tr>
-          </tbody>
-        </table>
+  <!-- High-Converting Comparison -->
+<section class="compare" id="why" style="background:#f8fafc;padding:36px 0">
+  <div class="container" style="max-width:1100px;margin:0 auto">
+    <h2 class="section-title" style="margin-bottom:24px">
+      Why 80% of Students Struggle in Big Batches — And How <span style="color:#25D366">iiTuitions</span> Fixes It
+    </h2>
+
+    <div style="display:grid;grid-template-columns:1fr 1fr;gap:20px;align-items:start">
+      
+      <!-- Left Column: Problems -->
+      <div style="background:#fff;border:1px solid #f1f5f9;border-radius:18px;padding:22px;box-shadow:0 8px 24px rgba(0,0,0,.06)">
+        <h3 style="font-size:20px;font-weight:900;color:#ef4444;margin-bottom:14px">❌ Problems With Traditional Coaching</h3>
+        <ul style="list-style:none;padding:0;margin:0;font-size:16px;color:#1f2937;line-height:1.6">
+          <li style="margin-bottom:12px">🚫 <b>80+ students per batch</b> → zero personal help</li>
+          <li style="margin-bottom:12px">🚫 <b>Fast-paced teaching</b> → students left behind</li>
+          <li style="margin-bottom:12px">🚫 <b>No recorded sessions</b> → missed concepts = lost forever</li>
+          <li style="margin-bottom:12px">🚫 <b>Generic plans</b> → no focus on weak topics</li>
+          <li style="margin-bottom:12px">🚫 <b>Parents kept in dark</b> → no updates, no strategy corrections</li>
+        </ul>
       </div>
-      <div class="tbl">
-        <div class="th th-b">IITuitions Solutions</div>
-        <table>
-          <tbody>
-            <tr><td>Max 50/year; true 1:1 attention</td></tr>
-            <tr><td>Custom roadmap + 15-day reviews</td></tr>
-            <tr><td>Recorded sessions; revisit anytime</td></tr>
-            <tr><td>IIT/NIT mentors; targeted drills</td></tr>
-          </tbody>
-        </table>
+
+      <!-- Right Column: Solutions -->
+      <div style="background:#fff;border:1px solid #f1f5f9;border-radius:18px;padding:22px;box-shadow:0 8px 24px rgba(0,0,0,.06)">
+        <h3 style="font-size:20px;font-weight:900;color:#10b981;margin-bottom:14px">✅ How iiTuitions Does It Differently</h3>
+        <ul style="list-style:none;padding:0;margin:0;font-size:16px;color:#1f2937;line-height:1.6">
+          <li style="margin-bottom:12px">🎓 <b>Max 50 students/year</b> → true 1-on-1 mentorship</li>
+          <li style="margin-bottom:12px">🧩 <b>Custom roadmap</b> → tailored plan for every child</li>
+          <li style="margin-bottom:12px">🎥 <b>Recorded sessions</b> → revisit topics anytime</li>
+          <li style="margin-bottom:12px">📊 <b>Micro & macro tests</b> → instant strategy fixes</li>
+          <li style="margin-bottom:12px">🤝 <b>Weekly parent reviews</b> → total clarity & transparency</li>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+  
 
   <!-- Footer -->
   <footer class="footer" id="contact">
