--- a/index.html
+++ b/index.html
@@ -554,9 +554,11 @@
       <div style="background:#fff;border:1px solid #f1f5f9;border-radius:18px;padding:22px;box-shadow:0 8px 24px rgba(0,0,0,.06)">
         <h3 style="font-size:20px;font-weight:900;color:#ef4444;margin-bottom:14px">❌ Problems With Traditional Coaching</h3>
         <ul style="list-style:none;padding:0;margin:0;font-size:16px;color:#1f2937;line-height:1.6">
+          
           <li style="margin-bottom:12px">🚫 <b>80+ students per batch</b> → zero personal help</li>
           <li style="margin-bottom:12px">🚫 <b>Fast-paced teaching</b> → students left behind</li>
           <li style="margin-bottom:12px">🚫 <b>No recorded sessions</b> → missed concepts = lost forever</li>
+          <li style="margin-bottom:14px">🚫 <b>No plan review</b> → mistakes repeat for months</li>
           <li style="margin-bottom:12px">🚫 <b>Generic plans</b> → no focus on weak topics</li>
           <li style="margin-bottom:12px">🚫 <b>Parents kept in dark</b> → no updates, no strategy corrections</li>
         </ul>
@@ -570,6 +572,10 @@
           <li style="margin-bottom:12px">🧩 <b>Custom roadmap</b> → tailored plan for every child</li>
           <li style="margin-bottom:12px">🎥 <b>Recorded sessions</b> → revisit topics anytime</li>
           <li style="margin-bottom:12px">📊 <b>Micro & macro tests</b> → instant strategy fixes</li>
+          <li style="margin-bottom:14px">💬 <b>Unlimited doubt support</b> → WhatsApp help anytime</li>
+          <li style="margin-bottom:14px">🔁 <b>15-day course-corrections</b> → mentor + parent alignment</li>
+          <li style="margin-bottom:14px">🔄 <b>Faculty replacement guarantee</b> → perfect mentor fit</li>
+
           <li style="margin-bottom:12px">🤝 <b>Weekly parent reviews</b> → total clarity & transparency</li>
         </ul>
       </div>
