--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
   <div class="container">
     <!-- Better Title -->
     <h2 class="section-title" style="margin-bottom:10px;text-align:center">
-      4.9★ Rated by 200+ Parents — <span style="color:#10b981">See Their Real Stories</span>
+      4.9★ Rated by 200+ Parents — <span style="color:#10b981">Why 200+ Parents Choose iiTuitions Over Big Batches</span>
     </h2>
 
     <!-- Ratings Strip -->
