--- a/index.html
+++ b/index.html
@@ -631,34 +631,26 @@
 
 
 
-<!-- ================== GOOGLE REVIEWS (Premium) ================== -->
+<!-- ================== GOOGLE REVIEWS (Premium, Black Typography) ================== -->
 <style>
   /* --- Layout wrappers --- */
   #reviews{background:#f8fafc;padding:40px 0}
   #reviews .wrap{max-width:1100px;margin:0 auto;padding:0 12px}
 
   /* Headline */
-  #reviews .headline{
-    text-align:center;margin-bottom:12px;font-weight:900;line-height:1.2
-  }
-  #reviews .headline .em{color:#10b981}
+  #reviews .headline{ text-align:center;margin-bottom:12px;font-weight:900;line-height:1.2 }
+  #reviews .headline .em{ color:#10b981 } /* keep brand accent for the phrase */
 
   /* Rating strip */
   .rating-box{
     display:flex;align-items:center;justify-content:center;gap:10px;
     background:#fff;border:1px solid #eef2f7;border-radius:18px;
     padding:12px 16px;margin:0 auto 18px;box-shadow:0 10px 26px rgba(0,0,0,.06);
-    max-width:720px;font-weight:800;color:#0b1220
+    max-width:720px;font-weight:800
   }
   .glogo{display:inline-flex;align-items:center;gap:6px}
   .glogo svg{width:18px;height:18px}
   .stars{color:#facc15;font-size:18px;letter-spacing:1px}
-  .muted{color:#64748b;font-weight:600}
-
-  /* Screenshots row (click to zoom) */
-  .shot-row{display:grid;grid-template-columns:1fr 1fr 1fr;gap:12px;max-width:980px;margin:0 auto 20px}
-  .shot-row img{width:100%;display:block;border-radius:14px;background:#f3f4f6;border:1px solid #e5e7eb;cursor:zoom-in;box-shadow:0 8px 22px rgba(0,0,0,.05)}
-  @media (max-width:780px){ .shot-row{grid-template-columns:1fr} }
 
   /* Review cards carousel */
   .rev-rail{position:relative}
@@ -675,26 +667,20 @@
   .rev-head{display:flex;align-items:center;gap:12px;margin-bottom:8px}
   .rev-avatar{width:46px;height:46px;border-radius:999px;object-fit:cover;background:#eef2f7;border:1px solid #e5e7eb}
   .rev-name{font-weight:900}
-  .badge{color:#10b981;font-weight:800}
-  .rev-meta{font-size:12px;color:#64748b}
+  .badge{font-weight:900;background:#f6f7f9;padding:2px 6px;border-radius:6px;display:inline-block}
+  .rev-meta{font-size:12px;opacity:.9}
   .rev-stars{color:#facc15;margin:4px 0}
-  .rev-body{color:#111827}
-  .hi{color:#10b981;font-weight:800} /* highlight numbers/benefits */
+  .rev-body{line-height:1.7}
+  .hi{font-weight:900;background:#f6f7f9;padding:2px 6px;border-radius:6px;display:inline-block}
 
-  /* Sticky CTA (sticks while this section is on screen) */
-  .cta-stick{
-    position:sticky;bottom:6px;display:flex;justify-content:center;margin-top:18px
-  }
-  .cta-stick .btn{font-size:18px;padding:12px 24px}
+  /* Sticky CTA */
+  .cta-stick{ position:sticky;bottom:6px;display:flex;justify-content:center;margin-top:18px }
+  .cta-stick .btn{ font-size:18px;padding:12px 24px }
 
-  /* Lightbox modal */
-  .lightbox{position:fixed;inset:0;display:none;place-items:center;background:rgba(0,0,0,.7);z-index:1000}
-  .lightbox.open{display:grid}
-  .lightbox img{max-width:min(1000px,94vw);max-height:88vh;border-radius:14px;box-shadow:0 24px 64px rgba(0,0,0,.5)}
-  .lightbox .close{
-    position:absolute;top:16px;right:16px;background:#fff;border:none;border-radius:10px;
-    padding:8px 10px;font-weight:900;cursor:pointer
-  }
+  /* ===== Typography overrides: make reviews section read in black ===== */
+  #reviews, #reviews *{ color:#0b1220 !important; }        /* near-black for legibility */
+  #reviews .stars, #reviews .rev-stars{ color:#facc15 !important; } /* keep gold stars */
+  #reviews .btn-wa{ color:#fff !important; }                /* button text stays white */
 </style>
 
 <section id="reviews">
@@ -708,15 +694,13 @@
     <div class="rating-box">
       <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
       <span style="font-weight:900">4.9/5</span>
-      <span class="muted">•</span>
       <span class="glogo">
         <!-- Google “G” -->
         <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="#EA4335" d="M12 10.2v3.6h5.1c-.2 1.2-1.5 3.6-5.1 3.6-3.1 0-5.7-2.6-5.7-5.8s2.6-5.8 5.7-5.8c1.8 0 3 .8 3.7 1.5l2.5-2.4C16.8 3.5 14.6 2.6 12 2.6 6.9 2.6 2.8 6.7 2.8 11.8s4.1 9.2 9.2 9.2c5.3 0 8.8-3.7 8.8-9 0-.6-.1-1-.1-1.6H12z"/></svg>
-        <span class="muted">200+ Google Reviews</span>
+        <span>200+ Google Reviews</span>
       </span>
     </div>
 
-    
     <!-- Review cards (carousel on mobile) -->
     <div class="rev-rail">
       <div class="rev-list" aria-label="Parent reviews">
@@ -768,7 +752,7 @@
       </div>
     </div>
 
-    <!-- Sticky CTA (sticks while scrolling inside this section) -->
+    <!-- Sticky CTA -->
     <div class="cta-stick">
       <a class="btn btn-wa" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20match%20a%20mentor%20to%20my%20child" target="_blank" rel="noopener">
         💬 Match a Mentor to My Child
@@ -776,30 +760,8 @@
     </div>
   </div>
 </section>
+<!-- ================== /GOOGLE REVIEWS ================== -->
 
-<!-- Lightbox for screenshots -->
-<div class="lightbox" id="lightbox" role="dialog" aria-modal="true">
-  <button class="close" id="lbClose" aria-label="Close">✕</button>
-  <img id="lbImg" alt="Google review full view">
-</div>
-
-<script>
-  // Click-to-zoom screenshots
-  const lb = document.getElementById('lightbox');
-  const lbImg = document.getElementById('lbImg');
-  const lbClose = document.getElementById('lbClose');
-
-  document.querySelectorAll('.shot-row img').forEach(img=>{
-    img.addEventListener('click',()=>{
-      lbImg.src = img.dataset.full || img.src;
-      lb.classList.add('open');
-    });
-  });
-  lbClose.addEventListener('click',()=> lb.classList.remove('open'));
-  lb.addEventListener('click',e=>{ if(e.target===lb) lb.classList.remove('open'); });
-  document.addEventListener('keydown',e=>{ if(e.key==='Escape') lb.classList.remove('open'); });
-</script>
-<!-- ================== /GOOGLE REVIEWS (Premium) ================== -->
 
 
 
