--- a/index.html
+++ b/index.html
@@ -860,11 +860,20 @@
 
 <!-- Floating buttons -->
 <a class="float-btn float-wa" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
-  <span class="ic">💬</span> WhatsApp
+  <!-- WhatsApp icon -->
+  <span class="wa-ic" aria-hidden="true">
+    <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+      <path d="M20.5 11.1c0 4.8-3.9 8.6-8.6 8.6-1.5 0-3-.4-4.2-1.1L3.5 20l1.4-4.1c-.8-1.3-1.2-2.8-1.2-4.4C3.7 6.6 7.6 2.8 12.3 2.8s8.2 3.9 8.2 8.3z" fill="#25D366"/>
+      <path d="M9.9 7.8c-.2-.4-.4-.3-.6-.3h-.5c-.2 0-.5.1-.7.4-.3.3-1 1-1 2.4s1 2.8 1.2 3 .2.4.4.6c.5.7 1.9 1.9 3.7 2.6 1.8.7 2.2.5 2.6.5s1.3-.5 1.5-1 .2-1 .2-1.1c0-.1-.1-.2-.3-.3l-1.4-.7c-.2-.1-.3 0-.4.1l-.6.8c-.1.1-.2.2-.4.1-.2-.1-.9-.3-1.7-1-.6-.5-1-1.1-1.1-1.3-.1-.2 0-.3.1-.4.1-.1.2-.2.3-.3.1-.1.1-.2.2-.3 0-.1 0-.2 0-.3 0-.1-.3-1.1-.5-1.6z" fill="#fff"/>
+    </svg>
+  </span>
+  <span class="txt">WhatsApp</span>
 </a>
+
 <a class="float-btn float-cta" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" target="_blank" rel="noopener" aria-label="Book Free Assessment">
   📋 Book Free Assessment
 </a>
+
 
 <script>
   // ===== Countdown (shared for both timers) =====
