--- a/index.html
+++ b/index.html
@@ -874,6 +874,7 @@
   function pad(n){ return String(n).padStart(2,'0'); }
   function tick(){
     const now = ne<!-- Floating buttons -->
+<!-- Floating buttons -->
 <a class="float-btn float-wa" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" 
    target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
   💬
@@ -883,6 +884,7 @@
    target="_blank" rel="noopener" aria-label="Book Free Assessment">
   📋 Book Free Assessment
 </a>
+
 w Date();
     let diff = Math.max(0, DLINE - now);
     const d = Math.floor(diff / (24*60*60*1000)); diff -= d*24*60*60*1000;
